# simple-django

./: .coveragerc  .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .mise.toml  .pre-commit-config.yaml  .projections.json  Dockerfile  LICENSE  Makefile  README.md  appconfig.example.env  appconfig.example.ini  bs-config.cjs  bs-config.js  bun.lockb  compose.yml  conftest.py  cookiecutter.json  db.sqlite3  deploy.example.toml  deploy.py  fmtl  gulpfile.js  gunicorn-docker-cmd  image_builder.example.toml  justfile  lfmt  manage.py  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pre-deploy.sh  pyproject.toml  rename.sample  rename.sh  setup.cfg  setup.sh  (+1 more)
ansible/: README.md  hosts_example  justfile  playbook.yml
ansible/group_vars/: all.yml
config/: settings.py  urls.py
requirements/: base.in  base.txt  dev.in  dev.txt  prod.txt
simple_django/: asgi.py  settings.py  urls.py
simple_django/accounts/: admin.py  apps.py  forms.py  urls.py  views.py
simple_django/core/: admin.py  apps.py  decorators.py  middleware.py  urls.py  views.py
src/: asgi.py  settings.py  urls.py  wsgi.py
src/accounts/: admin.py  forms.py  models.py  views.py
src/core/: apps.py  context_processors.py  urls.py  views.py
staticSrc/css/: index.css
staticSrc/js/: main.js  utils.js
staticSrc/scss/: _components.scss  _custom.scss  _utils.scss  _vars.scss  main.scss
templates/: 403.html  404.html  500.html  base.html  error-layout.html  fullbleed.html
templates/account/: email_confirm.html  layout.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html  verification_sent.html
templates/accounts/: base.html  confirm_delete_user.html  update_user.html
templates/common/: toast_messages.html
templates/cotton/: form.html  icon.html  toast.html
{{ cookiecutter.project_slug }}/: .env_sample  .gitignore  Dockerfile  Makefile  appconfig.example.ini  compose.yml  gulpfile.js  package.json  paddle_pubkey.sample.txt
(+177 files in other folders)
