[project]
name = "simple-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "django>=5.1.1",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-allauth[socialaccount]>=64.2.1",
    "whitenoise[brotli]>=6.7.0",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.2",
]

[project.optional-dependencies]
prod = [
    "django-anymail[amazon-ses]>=12.0",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "django-coverage-plugin>=3.1.0",
    "django-debug-toolbar>=4.4.6",
    "factory-boy>=3.3.1",
    "werkzeug>=3.0.4",
]
